--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .header {
     position: relative;
     height: 100vh; /* Full screen height */
-    background: url('favazzz.png') no-repeat center center;
+    background: url('wed_card.png') no-repeat center center;
     background-size: cover; /* Ensure the image covers the entire area */
     background-position: center center; /* Center the image */
 }
