--- a/style.css
+++ b/style.css
@@ -13,9 +13,12 @@ body {
     position: relative;
     height: 100vh; /* Full screen height */
     background: url('wed_card.png') no-repeat center center;
-    background-size: cover; /* Ensure the image covers the entire area */
-    background-position: center center; /* Center the image */
-}
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
+  }
 
 .overlay {
     position: absolute;
