--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .header {
     position: relative;
     height: 100vh; /* Full screen height */
-    background: url('wed_card.png') no-repeat center center;
+    background: url('favazzz.png') no-repeat center center;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
