--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ body {
     padding: 0;
     background-color: #121212;
     color: #ffffff;
-    overflow-x: hidden; /* Disable horizontal scrolling */
+    overflow-x: hidden;
 }
 
 .header {
     position: relative;
-    width: 100vw; /* Full viewport width */
-    height: 100vh; /* Full viewport height */
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -22,7 +22,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the image covers the entire container */
+    object-fit: cover;
     z-index: -1;
 }
 
@@ -71,7 +71,7 @@ body {
 }
 
 .navbar a:hover {
-    background-color: #ffd700; /* Gold */
+    background-color: #ffd700;
 }
 
 .reminder-container,
@@ -86,7 +86,7 @@ body {
 .wedding h2 {
     font-family: 'Great Vibes', cursive;
     font-size: 2.8rem;
-    color: #ffd700; /* Gold */
+    color: #ffd700;
     margin-bottom: 20px;
 }
 
@@ -105,7 +105,7 @@ body {
 .reminder span {
     display: block;
     font-size: 3rem;
-    color: #ffd700; /* Gold */
+    color: #ffd700;
 }
 
 .text-container {
@@ -113,7 +113,7 @@ body {
 }
 
 .location-button {
-    background-color: #ffd700; /* Gold */
+    background-color: #ffd700;
     color: black;
     border: none;
     padding: 15px 30px;
@@ -127,4 +127,33 @@ body {
 .location-button:hover {
     background-color: #e6be8a;
     transform: scale(1.05);
+}
+
+@media (max-width: 768px) {
+    .header-content h1 {
+        font-size: 2rem;
+    }
+
+    .header-content p {
+        font-size: 1rem;
+    }
+
+    .navbar a {
+        font-size: 1rem;
+        padding: 8px 16px;
+    }
+
+    .reminder span {
+        font-size: 2rem;
+    }
+
+    .reminder-container h2,
+    .wedding h2 {
+        font-size: 2rem;
+    }
+
+    .location-button {
+        padding: 10px 20px;
+        font-size: 1rem;
+    }
 }
