--- a/style.css
+++ b/style.css
@@ -10,13 +10,10 @@ body {
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    position: relative;
     width: 100vw; /* Full viewport width */
     height: 100vh; /* Full viewport height */
     overflow: hidden;
-    position: relative;
 }
 
 #background-image {
@@ -30,6 +27,10 @@ body {
 }
 
 .header-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
     z-index: 1;
 }
